--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,9 @@ cython_debug/
 
 
 pyproject.toml
-*/*nohup.out
-*/.cache/
-*/.ipynb_checkpoints/
-*/ __pycache__/
-*/flagged_data_points/
+.env
+*nohup.out
+.cache/
+.ipynb_checkpoints/
+__pycache__/
+flagged_data_points/
